[package]
name = "tests"
version = "0.1.0"
authors = ["prin-r <q@bandprotocol.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.2"
obi = { version = "0.0.1" }

[dev-dependencies]
casperlabs-contract = "0.5.0"
casperlabs-types = "0.5.0"
casperlabs-engine-test-support = "0.7.0"

[[bin]]
name = "integration-tests"
path = "src/integration_tests.rs"

[features]
default = ["casperlabs-contract/std", "casperlabs-types/std", "casperlabs-engine-test-support/test-support", "casperlabs-contract/test-support"]
